[gd_scene load_steps=9 format=3 uid="uid://be1o8tb502iun"]

[ext_resource type="Texture2D" uid="uid://d0can36h58ufu" path="res://Assets/Traps/Stalagmites1x_3.png" id="1_pgol3"]
[ext_resource type="Script" uid="uid://b6wttk1jhqvpf" path="res://Scripts/Traps/falling_stalagtite.gd" id="1_ta62a"]
[ext_resource type="Script" uid="uid://da5g2tgmvj2m1" path="res://Scripts/trap_knock_back.gd" id="2_xn1vh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ta62a"]
size = Vector2(16, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xn1vh"]
size = Vector2(23, 120)

[sub_resource type="Animation" id="Animation_deq21"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}

[sub_resource type="Animation" id="Animation_xn1vh"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, 0), Vector2(0, 0), Vector2(-3, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.366667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fall"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.166667, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [3.14159, 3.05433, 3.14159, 3.22886, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w320k"]
_data = {
&"RESET": SubResource("Animation_deq21"),
&"shake": SubResource("Animation_xn1vh")
}

[node name="FallingStalagtite" type="Area2D"]
script = ExtResource("1_ta62a")
metadata/_custom_type_script = ExtResource("2_xn1vh")

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_ta62a")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("1_pgol3")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(-0.5, 52)
shape = SubResource("RectangleShape2D_xn1vh")
debug_color = Color(0.959692, 0.145491, 0.35871, 0.42)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w320k")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
